Added rad hover state to button. Added footer

--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
             <p>The web is inherently responsive, it's only when we start adding fixed sizes to things that it breaks. It
                 it
                 ain't broke, dont fixed width it.</p>
-            <a class="button" href="">I want to learn</a>
-            <!-- <a class="button" href=""><span class="text-1">I want to learn</span><span class="text-2">OK Lets do
-                    it</span></a> -->
+            <a class="button-dsk" href="https://www.kevinpowell.co/" target="_blank" rel="noreffer noopener"><span
+                    class="text-1">I want to
+                    learn</span><span class="text-2">OK Lets do
+                    it</span></a>
+            <a class="button-mbl" href="https://www.kevinpowell.co/" target="_blank" rel="noreffer noopener">I want to
+                learn</a>
         </div>
 
     </div>
-
+    <footer><a href="https://rzzldzzl.design">RZZLDZZL.DESIGN</a></footer>
 </body>
 
 </html>
