--- a/index.html
+++ b/index.html
@@ -6,21 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conquering Responsive</title>
     <link rel="stylesheet" href="youaintgotnostyle.css">
+    <link rel="shortcut icon" type="image/png" href="/fav.ico" />
 </head>
 
 <body>
     <div class="hero">
-        <div class="hero-inner">
-            <h1>Responsive layouts don’t have to be a struggle</h1>
-            <p>The web is inherently responsive, it's only when we start adding fixed sizes to things that it breaks. It
-                it
-                ain't broke, dont fixed width it.</p>
-            <a class="button-dsk" href="https://www.kevinpowell.co/" target="_blank" rel="noreffer noopener"><span
-                    class="text-1">I want to
-                    learn</span><span class="text-2">OK Lets do
-                    it</span></a>
-            <a class="button-mbl" href="https://www.kevinpowell.co/" target="_blank" rel="noreffer noopener">I want to
-                learn</a>
+        <div class="container">
+            <div class="hero__text">
+                <h1>Responsive layouts don’t have to be a struggle</h1>
+                <p>The web is inherently responsive, it's only when we start adding fixed sizes to things that it
+                    breaks. It
+                    it
+                    ain't broke, dont fixed width it.</p>
+                <a class="button dsk" href="https://www.kevinpowell.co/" target="_blank" rel="noreffer noopener"><span
+                        class="text-1">I want to
+                        learn</span><span class="text-2">OK Lets do
+                        it</span></a>
+                <a class="button mbl" href="https://www.kevinpowell.co/" target="_blank" rel="noreffer noopener">I want
+                    to
+                    learn</a>
+            </div>
         </div>
 
     </div>
