Added resonsive slide out menu from fireship.io

--- a/index.html
+++ b/index.html
@@ -10,7 +10,71 @@
 </head>
 
 <body>
-    <div class="hero">
+    <nav class="navbar">
+        <ul class="navbar-nav">
+            <li class="nav-item arrow">
+                <a href="#" class="nav-link">
+                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="angle-double-right"
+                        class="svg-inline--fa fa-angle-double-right fa-w-14" role="img"
+                        xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                        <path fill="currentColor"
+                            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z">
+                        </path>
+                    </svg>
+                    <span class="link-text">MENU</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">
+                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="dove"
+                        class="svg-inline--fa fa-dove fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 512 512">
+                        <path fill="currentColor"
+                            d="M288 167.2v-28.1c-28.2-36.3-47.1-79.3-54.1-125.2-2.1-13.5-19-18.8-27.8-8.3-21.1 24.9-37.7 54.1-48.9 86.5 34.2 38.3 80 64.6 130.8 75.1zM400 64c-44.2 0-80 35.9-80 80.1v59.4C215.6 197.3 127 133 87 41.8c-5.5-12.5-23.2-13.2-29-.9C41.4 76 32 115.2 32 156.6c0 70.8 34.1 136.9 85.1 185.9 13.2 12.7 26.1 23.2 38.9 32.8l-143.9 36C1.4 414-3.4 426.4 2.6 435.7 20 462.6 63 508.2 155.8 512c8 .3 16-2.6 22.1-7.9l65.2-56.1H320c88.4 0 160-71.5 160-159.9V128l32-64H400zm0 96.1c-8.8 0-16-7.2-16-16s7.2-16 16-16 16 7.2 16 16-7.2 16-16 16z">
+                        </path>
+                    </svg>
+                    <span class="link-text">DOVES</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">
+                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="crow"
+                        class="svg-inline--fa fa-crow fa-w-20" role="img" xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 640 512">
+                        <path fill="currentColor"
+                            d="M544 32h-16.36C513.04 12.68 490.09 0 464 0c-44.18 0-80 35.82-80 80v20.98L12.09 393.57A30.216 30.216 0 0 0 0 417.74c0 22.46 23.64 37.07 43.73 27.03L165.27 384h96.49l44.41 120.1c2.27 6.23 9.15 9.44 15.38 7.17l22.55-8.21c6.23-2.27 9.44-9.15 7.17-15.38L312.94 384H352c1.91 0 3.76-.23 5.66-.29l44.51 120.38c2.27 6.23 9.15 9.44 15.38 7.17l22.55-8.21c6.23-2.27 9.44-9.15 7.17-15.38l-41.24-111.53C485.74 352.8 544 279.26 544 192v-80l96-16c0-35.35-42.98-64-96-64zm-80 72c-13.25 0-24-10.75-24-24 0-13.26 10.75-24 24-24s24 10.74 24 24c0 13.25-10.75 24-24 24z">
+                        </path>
+                    </svg>
+                    <span class="link-text">CROWS</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">
+                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="kiwi-bird"
+                        class="svg-inline--fa fa-kiwi-bird fa-w-18" role="img" xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 576 512">
+                        <path fill="currentColor"
+                            d="M575.81 217.98C572.64 157.41 518.28 112 457.63 112h-9.37c-52.82 0-104.25-16.25-147.74-46.24-41.99-28.96-96.04-41.62-153.21-28.7C129.3 41.12-.08 78.24 0 224c.04 70.95 38.68 132.8 95.99 166.01V464c0 8.84 7.16 16 16 16h16c8.84 0 16-7.16 16-16v-54.26c15.36 3.96 31.4 6.26 48 6.26 5.44 0 10.68-.73 16-1.18V464c0 8.84 7.16 16 16 16h16c8.84 0 16-7.16 16-16v-59.43c14.24-5.06 27.88-11.39 40.34-19.51C342.07 355.25 393.86 336 448.46 336c25.48 0 16.01-.31 23.05-.78l74.41 136.44c2.86 5.23 8.3 8.34 14.05 8.34 1.31 0 2.64-.16 3.95-.5 7.09-1.8 12.05-8.19 12.05-15.5 0 0 .14-240.24-.16-246.02zM463.97 248c-13.25 0-24-10.75-24-24 0-13.26 10.75-24 24-24s24 10.74 24 24c0 13.25-10.75 24-24 24zm80 153.25l-39.86-73.08c15.12-5.83 28.73-14.6 39.86-25.98v99.06z">
+                        </path>
+                    </svg>
+                    <span class="link-text">KIWIS</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">
+                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="ankh"
+                        class="svg-inline--fa fa-ankh fa-w-10" role="img" xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 320 512">
+                        <path fill="currentColor"
+                            d="M296 256h-44.62C272.46 222.01 288 181.65 288 144 288 55.63 230.69 0 160 0S32 55.63 32 144c0 37.65 15.54 78.01 36.62 112H24c-13.25 0-24 10.74-24 24v32c0 13.25 10.75 24 24 24h96v152c0 13.25 10.75 24 24 24h32c13.25 0 24-10.75 24-24V336h96c13.25 0 24-10.75 24-24v-32c0-13.26-10.75-24-24-24zM160 80c29.61 0 48 24.52 48 64 0 34.66-27.14 78.14-48 100.87-20.86-22.72-48-66.21-48-100.87 0-39.48 18.39-64 48-64z">
+                        </path>
+                    </svg>
+                    <span class="link-text">DARK</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
+    <section class="hero">
         <div class="container">
             <div class="hero__text">
                 <h1>Responsive layouts don’t have to be a struggle</h1>
@@ -27,8 +91,42 @@
                     learn</a>
             </div>
         </div>
+    </section>
+    <section class="body">
+        <div class="container">
+            <div class="body__text">
 
-    </div>
+                <p>I'm baby fixie everyday carry iPhone you probably haven't heard of them authentic yuccie before they
+                    sold
+                    out truffaut woke taxidermy YOLO lumbersexual etsy. Taxidermy venmo microdosing pug snackwave YOLO
+                    thundercats migas, celiac tilde. Hoodie activated charcoal glossier, readymade truffaut four dollar
+                    toast tattooed forage dreamcatcher stumptown gentrify craft beer disrupt shabby chic. Kickstarter
+                    fanny
+                    pack distillery meditation cloud bread. Readymade taiyaki bicycle rights tumeric coloring book
+                    affogato.
+                    Aesthetic wolf glossier flannel vexillologist roof party seitan four loko shoreditch dreamcatcher
+                    mixtape meggings waistcoat farm-to-table thundercats.</p>
+
+                <p>Bespoke cardigan hashtag keytar portland deep v. Lyft venmo viral polaroid raclette. Neutra unicorn
+                    iPhone farm-to-table cliche. Lo-fi synth fam tumeric, tbh cronut poutine small batch banh mi you
+                    probably haven't heard of them pinterest deep v jean shorts biodiesel. Pitchfork pabst literally
+                    pinterest banjo, before they sold out blog austin intelligentsia four loko biodiesel pickled shaman.
+                    Shaman austin health goth +1 heirloom distillery, humblebrag organic.</p>
+
+                <p>Listicle letterpress crucifix lo-fi kickstarter, hammock marfa everyday carry narwhal cray. Pop-up
+                    austin
+                    flannel cold-pressed polaroid lomo williamsburg hashtag pinterest stumptown yuccie kogi waistcoat.
+                    Microdosing slow-carb af, street art shaman wayfarers viral polaroid. Put a bird on it four dollar
+                    toast
+                    dreamcatcher, palo santo organic fingerstache brunch raclette brooklyn lumbersexual poutine pug
+                    gentrify
+                    marfa. Beard hoodie williamsburg taiyaki sartorial, readymade pork belly locavore chillwave.
+                    Chambray
+                    jean shorts art party meh pickled XOXO asymmetrical prism bespoke hoodie franzen enamel pin.</p>
+            </div>
+        </div>
+    </section>
+
     <footer><a href="https://rzzldzzl.design">RZZLDZZL.DESIGN</a></footer>
 </body>
 
