Updated link to correct site

--- a/index.html
+++ b/index.html
@@ -82,11 +82,12 @@
                     breaks. It
                     it
                     ain't broke, dont fixed width it.</p>
-                <a class="button dsk" href="https://www.kevinpowell.co/" target="_blank" rel="noreffer noopener"><span
-                        class="text-1">I want to
+                <a class="button dsk" href="https://courses.kevinpowell.co/conquering-responsive-layouts"
+                    target="_blank" rel="noreffer noopener"><span class="text-1">I want to
                         learn</span><span class="text-2">OK Lets do
                         it</span></a>
-                <a class="button mbl" href="https://www.kevinpowell.co/" target="_blank" rel="noreffer noopener">I want
+                <a class="button mbl" href="https://courses.kevinpowell.co/conquering-responsive-layouts"
+                    target="_blank" rel="noreffer noopener">I want
                     to
                     learn</a>
             </div>
