removed nav for now and added flex sections

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <nav class="navbar">
+    <!-- <nav class="navbar">
         <ul class="navbar-nav">
             <li class="nav-item arrow">
                 <a href="#" class="nav-link">
@@ -73,8 +73,9 @@
                 </a>
             </li>
         </ul>
-    </nav>
+    </nav> -->
     <section class="hero">
+
         <div class="container">
             <div class="hero__text">
                 <h1>Responsive layouts don’t have to be a struggle</h1>
@@ -92,41 +93,63 @@
                     learn</a>
             </div>
         </div>
+
     </section>
-    <section class="body">
+
+    <section>
+
         <div class="container">
-            <div class="body__text">
-
-                <p>I'm baby fixie everyday carry iPhone you probably haven't heard of them authentic yuccie before they
-                    sold
-                    out truffaut woke taxidermy YOLO lumbersexual etsy. Taxidermy venmo microdosing pug snackwave YOLO
-                    thundercats migas, celiac tilde. Hoodie activated charcoal glossier, readymade truffaut four dollar
-                    toast tattooed forage dreamcatcher stumptown gentrify craft beer disrupt shabby chic. Kickstarter
-                    fanny
-                    pack distillery meditation cloud bread. Readymade taiyaki bicycle rights tumeric coloring book
-                    affogato.
-                    Aesthetic wolf glossier flannel vexillologist roof party seitan four loko shoreditch dreamcatcher
-                    mixtape meggings waistcoat farm-to-table thundercats.</p>
-
-                <p>Bespoke cardigan hashtag keytar portland deep v. Lyft venmo viral polaroid raclette. Neutra unicorn
-                    iPhone farm-to-table cliche. Lo-fi synth fam tumeric, tbh cronut poutine small batch banh mi you
-                    probably haven't heard of them pinterest deep v jean shorts biodiesel. Pitchfork pabst literally
-                    pinterest banjo, before they sold out blog austin intelligentsia four loko biodiesel pickled shaman.
-                    Shaman austin health goth +1 heirloom distillery, humblebrag organic.</p>
-
-                <p>Listicle letterpress crucifix lo-fi kickstarter, hammock marfa everyday carry narwhal cray. Pop-up
-                    austin
-                    flannel cold-pressed polaroid lomo williamsburg hashtag pinterest stumptown yuccie kogi waistcoat.
-                    Microdosing slow-carb af, street art shaman wayfarers viral polaroid. Put a bird on it four dollar
-                    toast
-                    dreamcatcher, palo santo organic fingerstache brunch raclette brooklyn lumbersexual poutine pug
-                    gentrify
-                    marfa. Beard hoodie williamsburg taiyaki sartorial, readymade pork belly locavore chillwave.
-                    Chambray
-                    jean shorts art party meh pickled XOXO asymmetrical prism bespoke hoodie franzen enamel pin.</p>
+            <div class="flexbox">
+                <div class="flexbox__text">
+                    <h2 class="flexbox__title flexbox__title--color">FLEXBOX</h2>
+                    <p>Fixie everyday carry iPhone you probably haven't heard of them authentic yuccie before
+                        they sold out truffaut woke taxidermy lumbersexual etsy. Taxidermy venmo microdosing pug
+                        snackwave.
+                    </p>
+                </div>
+                <div class="flexbox__text">
+                    <h2 class="flexbox__title flexbox__title--color">IS TOTALLY</h2>
+                    <p>Bespoke cardigan hashtag keytar portland deep v. Lyft venmo viral polaroid raclette. Neutra
+                        unicorn
+                        iPhone farm-to-table cliche. Lo-fi synth fam tumeric, tbh cronut poutine small batch banh mi
+                        you
+                        probably haven't heard of them.</p>
+                </div>
+                <div class="flexbox__text">
+                    <h2 class="flexbox__title flexbox__title--color">AWESOME</h2>
+                    <p>Listicle letterpress crucifix lo-fi kickstarter, hammock marfa everyday carry narwhal cray.
+                        Pop-up
+                        austin
+                        flannel cold-pressed polaroid lomo williamsburg hashtag pinterest stumptown yuccie kogi
+                        waistcoat.</p>
+                </div>
             </div>
         </div>
+
     </section>
+
+    <section class="section--color">
+
+        <div class="container">
+            <div class="flexbox">
+                <div class="flexbox__text">
+                    <h2 class="flexbox__title">NO REALLY</h2>
+                    <p>Fixie everyday carry iPhone you probably haven't heard of them authentic yuccie before
+                        they sold out truffaut woke taxidermy lumbersexual. Taxidermy microdosing pug
+                        snackwave iPhone farm-to-table cliche.
+                    </p>
+                </div>
+                <div class="flexbox__text">
+                    <h2 class="flexbox__title">IT'S AWESOME</h2>
+                    <p>Fixie everyday carry iPhone you probably haven't heard of them authentic yuccie before
+                        they sold out truffaut woke taxidermy lumbersexual. Taxidermy microdosing pug
+                        snackwave iPhone farm-to-table cliche.</p>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
 
     <footer><a href="https://rzzldzzl.design">RZZLDZZL.DESIGN</a></footer>
 </body>
