Added 2nd page with new layout + images

--- a/index.html
+++ b/index.html
@@ -76,53 +76,47 @@
     </nav> -->
     <section class="hero">
 
-        <div class="container">
+        <div class="container flexbox">
             <div class="hero__text">
-                <h1>Responsive layouts don’t have to be a struggle</h1>
+                <h1>Responsive layouts don’t have to be a struggle—</h1>
                 <p>The web is inherently responsive, it's only when we start adding fixed sizes to things that it
-                    breaks. It
-                    it
-                    ain't broke, dont fixed width it.</p>
-                <a class="button dsk" href="https://courses.kevinpowell.co/conquering-responsive-layouts"
-                    target="_blank" rel="noreffer noopener"><span class="text-1">I want to
-                        learn</span><span class="text-2">OK Lets do
-                        it</span></a>
-                <a class="button mbl" href="https://courses.kevinpowell.co/conquering-responsive-layouts"
-                    target="_blank" rel="noreffer noopener">I want
-                    to
-                    learn</a>
+                    breaks.<br>If it ain't broke, dont fixed width it.</p>
+                <a class="button dsk" href="https://www.kevinpowell.co/" target="_blank" rel="noreffer noopener"><span
+                        class="text-1">I want to learn</span>
+                    <span class="text-2">OK Lets do it</span></a>
+                <a class="button mbl" href="https://www.kevinpowell.co/" target="_blank" rel="noreffer noopener">I
+                    want to learn</a>
             </div>
+            <img class="hero__img" src="./img/rzzl-cantstop.png" alt="Cant Stop">
         </div>
 
     </section>
 
     <section>
 
-        <div class="container">
-            <div class="flexbox">
-                <div class="flexbox__text">
-                    <h2 class="flexbox__title flexbox__title--color">FLEXBOX</h2>
-                    <p>Fixie everyday carry iPhone you probably haven't heard of them authentic yuccie before
-                        they sold out truffaut woke taxidermy lumbersexual etsy. Taxidermy venmo microdosing pug
-                        snackwave.
-                    </p>
-                </div>
-                <div class="flexbox__text">
-                    <h2 class="flexbox__title flexbox__title--color">IS TOTALLY</h2>
-                    <p>Bespoke cardigan hashtag keytar portland deep v. Lyft venmo viral polaroid raclette. Neutra
-                        unicorn
-                        iPhone farm-to-table cliche. Lo-fi synth fam tumeric, tbh cronut poutine small batch banh mi
-                        you
-                        probably haven't heard of them.</p>
-                </div>
-                <div class="flexbox__text">
-                    <h2 class="flexbox__title flexbox__title--color">AWESOME</h2>
-                    <p>Listicle letterpress crucifix lo-fi kickstarter, hammock marfa everyday carry narwhal cray.
-                        Pop-up
-                        austin
-                        flannel cold-pressed polaroid lomo williamsburg hashtag pinterest stumptown yuccie kogi
-                        waistcoat.</p>
-                </div>
+        <div class="container flexbox">
+            <div class="flexbox__text">
+                <h2 class="flexbox__title flexbox__title--color">FLEXBOX</h2>
+                <p>Fixie everyday carry iPhone you probably haven't heard of them authentic yuccie before
+                    they sold out truffaut woke taxidermy lumbersexual etsy. Taxidermy venmo microdosing pug
+                    snackwave.
+                </p>
+            </div>
+            <div class="flexbox__text">
+                <h2 class="flexbox__title flexbox__title--color">IS TOTALLY</h2>
+                <p>Bespoke cardigan hashtag keytar portland deep v. Lyft venmo viral polaroid raclette. Neutra
+                    unicorn
+                    iPhone farm-to-table cliche. Lo-fi synth fam tumeric, tbh cronut poutine small batch banh mi
+                    you
+                    probably haven't heard of them.</p>
+            </div>
+            <div class="flexbox__text">
+                <h2 class="flexbox__title flexbox__title--color">AWESOME</h2>
+                <p>Listicle letterpress crucifix lo-fi kickstarter, hammock marfa everyday carry narwhal cray.
+                    Pop-up
+                    austin
+                    flannel cold-pressed polaroid lomo williamsburg hashtag pinterest stumptown yuccie kogi
+                    waistcoat.</p>
             </div>
         </div>
 
@@ -130,28 +124,30 @@
 
     <section class="section--color">
 
-        <div class="container">
-            <div class="flexbox">
-                <div class="flexbox__text">
-                    <h2 class="flexbox__title">NO REALLY</h2>
-                    <p>Fixie everyday carry iPhone you probably haven't heard of them authentic yuccie before
-                        they sold out truffaut woke taxidermy lumbersexual. Taxidermy microdosing pug
-                        snackwave iPhone farm-to-table cliche.
-                    </p>
-                </div>
-                <div class="flexbox__text">
-                    <h2 class="flexbox__title">IT'S AWESOME</h2>
-                    <p>Fixie everyday carry iPhone you probably haven't heard of them authentic yuccie before
-                        they sold out truffaut woke taxidermy lumbersexual. Taxidermy microdosing pug
-                        snackwave iPhone farm-to-table cliche.</p>
-                </div>
+        <div class="container flexbox">
+            <div class="flexbox__text">
+                <h2 class="flexbox__title">NO REALLY</h2>
+                <p>Fixie everyday carry iPhone you probably haven't heard of them authentic yuccie before
+                    they sold out truffaut woke taxidermy lumbersexual. Taxidermy microdosing pug
+                    snackwave iPhone farm-to-table cliche.
+                </p>
+            </div>
+            <div class="flexbox__text">
+                <h2 class="flexbox__title">IT'S AWESOME</h2>
+                <p>Fixie everyday carry iPhone you probably haven't heard of them authentic yuccie before
+                    they sold out truffaut woke taxidermy lumbersexual. Taxidermy microdosing pug
+                    snackwave iPhone farm-to-table cliche.</p>
             </div>
         </div>
 
     </section>
 
+    <footer>
+        <a href="index.html" class="active">DAY 008</a> /
+        <a href="day009.html">DAY 009</a> /
+        <a href="https://rzzldzzl.design">RZZLDZZL.DESIGN</a>
+    </footer>
 
-    <footer><a href="https://rzzldzzl.design">RZZLDZZL.DESIGN</a></footer>
 </body>
 
 </html>
