--- a/flexbox2.html
+++ b/flexbox2.html
@@ -28,9 +28,9 @@
 
     </section>
 
-    <section class="container flexbox2">
+    <main class="container flexbox2">
 
-        <div class="flexbox2__main">
+        <section class="flexbox2__main">
             <h2 class="flexbox2__title flexbox__title--color">Quality designs made custom, on demand, just for you
             </h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
@@ -41,9 +41,10 @@
                 et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipiscing
                 elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
             </p>
-        </div>
 
-        <div class="flexbox2__aside">
+        </section>
+
+        <aside class="flexbox2__aside">
 
             <div class="flexbox2__aside-text">
                 <h2 class="flexbox2__title">FLEXBOX</h2>
@@ -61,13 +62,14 @@
                     et dolore magna aliqua. Ut enim ad minim veniam.</p>
             </div>
 
-        </div>
+        </aside>
 
-    </section>
+    </main>
 
     <footer>
-        <a href="index.html">DAY 008</a> /
-        <a href="day009.html" class="active">DAY 009</a> /
+        <a href="index.html">001</a> /
+        <a href="flexbox2.html" class="active">002</a> /
+        <a href="flexbox3.html">003</a> /
         <a href="https://rzzldzzl.design">RZZLDZZL.DESIGN</a>
     </footer>
 
