--- a/index.html
+++ b/index.html
@@ -143,8 +143,9 @@
     </section>
 
     <footer>
-        <a href="index.html" class="active">DAY 008</a> /
-        <a href="day009.html">DAY 009</a> /
+        <a href="index.html" class="active">001</a> /
+        <a href="flexbox2.html">002</a> /
+        <a href="flexbox3.html">003</a> /
         <a href="https://rzzldzzl.design">RZZLDZZL.DESIGN</a>
     </footer>
 
