Added Flexbox 4 Challange!

--- a/flexbox2.html
+++ b/flexbox2.html
@@ -12,7 +12,7 @@
 <body>
     <section class="hero">
 
-        <div class="container flexbox">
+        <div class="container flexbox padding-vertical">
             <div class="hero__text">
                 <h1>Responsive layouts don’t have to be a struggle—</h1>
                 <p>The web is inherently responsive, it's only when we start adding fixed sizes to things that it
@@ -28,7 +28,7 @@
 
     </section>
 
-    <main class="container flexbox2">
+    <main class="container flexbox2 padding-vertical">
 
         <section class="flexbox2__main">
             <h2 class="flexbox2__title flexbox__title--color">Quality designs made custom, on demand, just for you
@@ -70,6 +70,7 @@
         <a href="index.html">001</a> /
         <a href="flexbox2.html" class="active">002</a> /
         <a href="flexbox3.html">003</a> /
+        <a href="flexbox4.html">004</a> /
         <a href="https://rzzldzzl.design">RZZLDZZL.DESIGN</a>
     </footer>
 
