--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </nav> -->
     <section class="hero">
 
-        <div class="container flexbox">
+        <div class="container flexbox padding-vertical">
             <div class="hero__text">
                 <h1>Responsive layouts don’t have to be a struggle—</h1>
                 <p>The web is inherently responsive, it's only when we start adding fixed sizes to things that it
@@ -94,7 +94,7 @@
 
     <section>
 
-        <div class="container flexbox">
+        <div class="container flexbox  padding-vertical">
             <div class="flexbox__text">
                 <h2 class="flexbox__title flexbox__title--color">FLEXBOX</h2>
                 <p>Fixie everyday carry iPhone you probably haven't heard of them authentic yuccie before
@@ -105,17 +105,14 @@
             <div class="flexbox__text">
                 <h2 class="flexbox__title flexbox__title--color">IS TOTALLY</h2>
                 <p>Bespoke cardigan hashtag keytar portland deep v. Lyft venmo viral polaroid raclette. Neutra
-                    unicorn
-                    iPhone farm-to-table cliche. Lo-fi synth fam tumeric, tbh cronut poutine small batch banh mi
-                    you
-                    probably haven't heard of them.</p>
+                    unicorn iPhone farm-to-table cliche. Lo-fi synth fam tumeric, tbh cronut poutine small batch banh mi
+                    you probably haven't heard of them.</p>
             </div>
             <div class="flexbox__text">
                 <h2 class="flexbox__title flexbox__title--color">AWESOME</h2>
                 <p>Listicle letterpress crucifix lo-fi kickstarter, hammock marfa everyday carry narwhal cray.
-                    Pop-up
-                    austin
-                    flannel cold-pressed polaroid lomo williamsburg hashtag pinterest stumptown yuccie kogi
+                    Pop-up austin flannel cold-pressed polaroid lomo williamsburg hashtag pinterest stumptown yuccie
+                    kogi
                     waistcoat.</p>
             </div>
         </div>
@@ -124,7 +121,7 @@
 
     <section class="section--color">
 
-        <div class="container flexbox">
+        <div class="container flexbox padding-vertical">
             <div class="flexbox__text">
                 <h2 class="flexbox__title">NO REALLY</h2>
                 <p>Fixie everyday carry iPhone you probably haven't heard of them authentic yuccie before
@@ -146,6 +143,7 @@
         <a href="index.html" class="active">001</a> /
         <a href="flexbox2.html">002</a> /
         <a href="flexbox3.html">003</a> /
+        <a href="flexbox4.html">004</a> /
         <a href="https://rzzldzzl.design">RZZLDZZL.DESIGN</a>
     </footer>
 
