--- a/flexbox4.html
+++ b/flexbox4.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Conquering Responsive Day 009</title>
+    <title>Conquering Responsive</title>
     <link rel="stylesheet" href="flexbox4.css">
     <link rel="shortcut icon" type="image/png" href="/fav.ico" />
 </head>
