--- a/flexbox3.html
+++ b/flexbox3.html
@@ -92,10 +92,11 @@
     </main>
 
     <footer>
-        <a href="index.html">001</a> /
-        <a href="flexbox2.html">002</a> /
-        <a href="flexbox3.html" class="active">003</a> /
-        <a href="flexbox4.html">004</a> /
+        <a href="index.html">FLEX1</a> /
+        <a href="flexbox2.html">FLEX2</a> /
+        <a href="flexbox3.html" class="active">FLEX3</a> /
+        <a href="flexbox4.html">FLEX4</a> /
+        <a href="grid1.html">GRID1</a> /
         <a href="https://rzzldzzl.design">RZZLDZZL.DESIGN</a>
     </footer>
 
