--- a/flexbox4.html
+++ b/flexbox4.html
@@ -72,10 +72,11 @@
     </main>
 
     <footer>
-        <a href="index.html">001</a> /
-        <a href="flexbox2.html">002</a> /
-        <a href="flexbox3.html">003</a> /
-        <a href="flexbox4.html" class="active">004</a> /
+        <a href="index.html">FLEX1</a> /
+        <a href="flexbox2.html">FLEX2</a> /
+        <a href="flexbox3.html">FLEX3</a> /
+        <a href="flexbox4.html" class="active">FLEX4</a> /
+        <a href="grid1.html">GRID1</a> /
         <a href="https://rzzldzzl.design">RZZLDZZL.DESIGN</a>
     </footer>
 
