--- a/index.html
+++ b/index.html
@@ -140,10 +140,11 @@
     </section>
 
     <footer>
-        <a href="index.html" class="active">001</a> /
-        <a href="flexbox2.html">002</a> /
-        <a href="flexbox3.html">003</a> /
-        <a href="flexbox4.html">004</a> /
+        <a href="index.html" class="active">FLEX1</a> /
+        <a href="flexbox2.html">FLEX2</a> /
+        <a href="flexbox3.html">FLEX3</a> /
+        <a href="flexbox4.html">FLEX4</a> /
+        <a href="grid1.html">GRID1</a> /
         <a href="https://rzzldzzl.design">RZZLDZZL.DESIGN</a>
     </footer>
 
